--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
     <title>Ublime app</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
       <a href="/" class="nabvar-brand">
-        <img src="{% static 'img/logo-ublime.png'%}" alt="logo" height="50px">
+        <h5 class="text-info"><i class="fa fa-fire"></i> Ublime</h5>
       </a>
       <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
@@ -30,8 +30,8 @@
             </li>
         </ul>
       </div>
-      <button class="btn btn-success ml-10 mr-2">Sing Up</button>
-      <button class="btn btn-danger ml-10 mr-2">Log In</button>
+      <a href="#" class="btn btn-success btn-sm ml-10 mr-2">Sing Up</a>
+      <a href="#" class="btn btn-outline-danger btn-sm ml-10 mr-2">Log In</a>
 
     </nav>
     <h1>Hello, world!</h1>
