--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Optional JavaScript -->
     <title>Ublime app</title>
   </head>
-  <body>
+  <body class="ub-body">
     <!-- nav bar -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
       <div class="container">
@@ -81,8 +81,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'js/base.js'%}">
-
-    </script>
+    <script type="text/javascript" src="{% static 'js/base.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/maps.js'%}"></script>
   </body>
 </html>
