--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Buena Perrito</title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
