--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,77 +5,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- sweetalert cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.10.0/dist/sweetalert2.all.min.js"></script>
     <!-- Optional JavaScript -->
     <title>Ublime app</title>
+    {% leaflet_js %}
+    {% leaflet_css %}
   </head>
   <body class="ub-body">
-    <!-- nav bar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
-      <div class="container">
-
-        <a href="/" class="nabvar-brand">
-          <h5 class="text-info"><i class="fa fa-fire"></i>Ublime</h5>
-        </a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse flex-grow-0 ml-auto" id="navbar">
-          <ul class="navbar-nav text-right">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#about">About</a>
-              </li>
-              <li class="nav-item active">
-                  <a class="nav-link" href="#contact">Contact</a>
-              </li>
-          </ul>
-        </div>
-        <a href="#" class="btn btn-success btn-sm ml-10 mr-2">Sing Up</a>
-        <a href="#" class="btn btn-outline-info btn-sm ml-10 mr-2">Log In</a>
-
-      </div>
-    </nav>
+    {% include 'app/navbar.html' %}
     {% block content %}
 
 
     {% endblock content %}
-    <!-- Footer -->
-    <footer class="page-footer font-small bg-dark sticky-bottom">
 
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3 text-light">© 2020 Copyright:
-        <a href="#"> ublime.com whit ❤️</a>
-      </div>
-      <!-- Copyright -->
-
-    </footer>
-    <!-- Footer -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    {% include 'app/footer.html' %}
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
