--- a/app/templates/app/user_interface.html
+++ b/app/templates/app/user_interface.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'app/base.html' %}
 {% load static %}
+{% load leaflet_tags %}
 
 {% block content %}
   <!-- show api maps -->
@@ -7,18 +8,8 @@
     <h2 class="display-3">Search your Toilet</h2>
     <div class="row">
       <div class="col-12 mt-2" style="height: 400px;">
-        <div id="map"></div>
-        <script>
-          var map;
-          function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -34.397, lng: 150.644},
-              zoom: 8
-            });
-          }
-        </script>
+       {% leaflet_map "map" callback="window.map_init_basic" %}
       </div>
-    </div>
     <div class="mt-3">
       <a href="#" class="btn btn-success center-block btn-lg">Go Go Go</a>
     </div>
@@ -27,8 +18,11 @@
   <div class="container mt-5 pt-5">
     <div class="row">
       <div class="col-12 bg-info" style="height: 400px;">
+        <h1 class="title text-center"></h1>
+        <h1 class="title-img text-center"></h1>
+        <img class="img-toilet" src="" alt="">
       </div>
     </div>
   </div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7q85pzkeZTVnj08vccHAK_jXG9Y1Jz34&callback=initMap"></script>
+  {% include 'app/maps.html' %}
 {% endblock content %}
