[Feature]: Create the user and provider interface and add the api leaflet with maps

--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,5 +1,6 @@
  <!-- nav bar -->
-   <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
+ <div class="container-fluid">
+     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
      <div class="container">
 
        <a href="/" class="nabvar-brand">
@@ -23,3 +24,4 @@
 
      </div>
    </nav>
+ </div>
