--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -15,8 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.10.0/dist/sweetalert2.all.min.js"></script>
     <!-- Optional JavaScript -->
     <title>Ublime app</title>
-    {% leaflet_js %}
-    {% leaflet_css %}
+    {% block head %}
+    {% endblock head %}
   </head>
   <body class="ub-body">
     {% include 'app/navbar.html' %}
@@ -32,6 +32,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'js/base.js'%}"></script>
-    <script type="text/javascript" src="{% static 'js/maps.js'%}"></script>
   </body>
 </html>
