--- a/app/templates/app/maps.html
+++ b/app/templates/app/maps.html
@@ -1,3 +1,4 @@
+{% load static %}
    <script>
       let movil = false;
       if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
