[Feature]: Update files and first version

--- a/app/templates/app/singup-provider.html
+++ b/app/templates/app/singup-provider.html
@@ -56,7 +56,7 @@
 				 <div class="form-group">
 					 <button type="submit" class="btn btn-warning btn-block"> Create Account  </button>
 				 </div>
-				  <p class="text-center">Have an account? <a href="{% url 'LoginPage' %}"> Log In</a> </p>
+				  <p class="text-center">Have an account? <a href="{% url 'loginPage' %}"> Log In</a> </p>
  		 	</form>
 		 </article>
 	 </div>
