--- a/app/templates/app/provider-interface.html
+++ b/app/templates/app/provider-interface.html
@@ -17,7 +17,7 @@
       <div class="col-6">
 
         <h2>Create a toilet</h2>
-        <form method="POST" class="post-form">{% csrf_token %}
+        <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
           {% for field in form %}
           <div class="form-goup">
             <!-- {{ field.label_tag }} {{ field }} -->
