--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -8,7 +8,6 @@
     <style type="text/css"  >
       .leaflet-control-attribution{
         display: none;
-      }
     </style>
 
 {% endblock head %}
@@ -28,10 +27,10 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-12 bg-info" style="height: 400px;">
+      <div class="col-12" style="height: 400px;">
         <h1 class="title text-center"></h1>
         <h1 class="title-img text-center"></h1>
-        <img class="img-toilet" src="" alt="">
+        <img class="img-1" src="" alt="" style="{width: 50px, height: 50px}">
       </div>
     </div>
   </div>
