[Feature]: Create template for views of toilets infromation

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -18,7 +18,7 @@
     {% block head %}
     {% endblock head %}
   </head>
-  <body class="ub-body">
+  <body class="ub-body" style="{height: 100%}">
     {% include 'app/navbar.html' %}
     {% block content %}
 
