--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -22,17 +22,40 @@
       </div>
     </div>
     <div class="my-4">
-      <a href="#" class="btn btn-success center-block btn-lg">Go Go Go</a>
+      <a href="#" class="btn btn-success center-block btn-lg putMarkers">Go Go Go</a>
     </div>
 
   <div class="container">
     <div class="row">
       <div class="col-12" style="height: 400px;">
         <h1 class="title text-center"></h1>
-        <h1 class="title-img text-center"></h1>
-        <img class="img-1" src="" alt="" style="{width: 50px, height: 50px}">
+        /* <img class="img-1" src="" alt="" style="{width: 50px, height: 50px}"> */
+        /* <img class="img-2" src="" alt="" style="{width: 50px, height: 50px}"> */
+        /* <img class="img-3" src="" alt="" style="{width: 50px, height: 50px}"> */
+
+      </div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 img-1" src="" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 img-2" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 img-3" src="..." alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
-  {% include 'app/maps.html' %}
+{% include 'app/maps.html' %}
 {% endblock content %}
