--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,5 +1,5 @@
  <!-- nav bar -->
- <div class="container-fluid">
+ <div class="container-fluid mb-5">
      <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
      <div class="container">
 
@@ -20,7 +20,7 @@
          </ul>
        </div>
        <a href="{% url 'singupProvider' %}" class="btn btn-success btn-sm ml-10 mr-2">Sing Up</a>
-       <a href="{% url 'singupProvider' %}" class="btn btn-outline-info btn-sm ml-10 mr-2">Log In</a>
+       <a href="{% url 'loginPage' %}" class="btn btn-outline-info btn-sm ml-10 mr-2">Log In</a>
        <span><a class='btn btn-warning mr-2'href="{% url 'logoutPage' %}"> Logout </a></span>
        <span class="text-light mr-2 ">Hello: {{ request.user }}</span>
      </div>
