--- a/app/templates/app/provider-interface.html
+++ b/app/templates/app/provider-interface.html
@@ -1,6 +1,7 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% load leaflet_tags %}
+{% load crispy_forms_tags %}
 
 {% block head %}
     {% leaflet_js %}
@@ -14,28 +15,45 @@
 {% block content %}
   <div class="container mt-5 pt-5">
     <div class="row">
-      <div class="col-6">
+      <div class="col-12">
+        <h2 class="text-center display-3">Create a toilet</h2>
+        <div class="col-12">
+          {% leaflet_map "map" callback="window.map_init_basic" %}
+        </div>
 
-        <h2>Create a toilet</h2>
         <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
-          {% for field in form %}
-          <div class="form-goup">
-            <!-- {{ field.label_tag }} {{ field }} -->
-            {% if 'latitude' in field.label_tag %}
-              {{ field.as_hidden }}
-            {% elif 'longitude' in field.label_tag %}
-              {{ field.as_hidden }}
-            {% else %}
-              {{ field.errors }}
-              <p>{{ field.label_tag }} {{ field }}</p>
-            {% endif %}
+          {% csrf_token %}
+            <div class="row mt-5">
+
+          <div class="form-group col-12 mb-0">
+              {{ form.address|as_crispy_field }}
           </div>
-          {% endfor %}
+          </div>
+            <div class="row">
+            <div class="form-group col-4">
+              {{ form.image_1| as_crispy_field }}
+            </div>
+            <div class="form-group col-4">
+              {{ form.image_2 | as_crispy_field}}
+            </div>
+            <div class="form-group col-4">
+              {{ form.image_3 | as_crispy_field}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-sm-12 col-lg-10 mb-0">
+              {{ form.description|as_crispy_field }}
+            </div>
+            <div class="form-group col-sm-12 col-lg-2 mb-0">
+              {{ form.accesibility|as_crispy_field }}
+            </div>
+          </div>
+          <div class="row">
+            {{ form.latitude.as_hidden }}
+            {{ form.longitude.as_hidden }}
+          </div>
           <button type="submit" class="save btn btn-info">Save</button>
         </form>
-      </div>
-      <div class="col-6">
-        {% leaflet_map "map" callback="window.map_init_basic" %}
       </div>
     </div>
   </div>
