--- a/app/templates/app/user-interface.html
+++ b/app/templates/app/user-interface.html
@@ -3,11 +3,13 @@
 {% load leaflet_tags %}
 
 {% block head %}
+    <link rel="stylesheet" href="{% static 'css/user-interface.css' %}">
     {% leaflet_js %}
     {% leaflet_css %}
-    <style type="text/css"  >
+    <style type="text/css">
       .leaflet-control-attribution{
         display: none;
+      }
     </style>
 
 {% endblock head %}
@@ -26,36 +28,21 @@
     </div>
 
   <div class="container">
+    <h3 class="title text-center display-4"></h3>
     <div class="row">
-      <div class="col-12" style="height: 400px;">
-        <h1 class="title text-center"></h1>
-        /* <img class="img-1" src="" alt="" style="{width: 50px, height: 50px}"> */
-        /* <img class="img-2" src="" alt="" style="{width: 50px, height: 50px}"> */
-        /* <img class="img-3" src="" alt="" style="{width: 50px, height: 50px}"> */
-
-      </div>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100 img-1" src="" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 img-2" src="..." alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100 img-3" src="..." alt="Third slide">
-          </div>
+        <div class="col-sm-12 col-lg-4 mb-2">
+          <img src="" alt="" class="rounded float-left img-1">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="col-sm-12 col-lg-4 mb-2">
+          <img src="" alt="" class="rounded float-center img-2">
+        </div>
+        <div class="col-sm-12 col-lg-4 mb-2">
+          <img src="" alt="" class="rounded float-right img-3">
+        </div>
       </div>
     </div>
+    <p class="description mt-5"></p>
+    <p class="accesibility"></p>
   </div>
 {% include 'app/maps.html' %}
 {% endblock content %}
