--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -50,7 +50,7 @@
 
     <!-- Page Content -->
     <section id="team">
-      <div class="container justify-content-between mt-5">
+      <div class="container justify-content-between my-5 py-5">
         <h2 class="text-center">OUR TEAM</h2>
         <div class="row mt-3">
           <!-- Team Member 1 -->
