--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,10 @@
-#testimonial {
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+  #testimonial {
   margin-top: 40px;
   padding: 50px 0 30px 0;
   background: #f1f1f1;
@@ -9,7 +15,6 @@ header {
   margin-top: 75px;
 }
 
-#contact {
+#team {
   background: #f1f1f1;
-
 }
