[Fix]: adding text in the home.html, deleting the anonymous user in the navbar.html, changgin settings.py to render 404 error page, changing the models for use foreignkey to user

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,8 +7,11 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-med-6 col-lg-6 header-content-left">
-            <h2 class="display-4">Do you have a need?</h2>
-            <p class="text-justify mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2 class="display-4">I'm shitting!!!</h2>
+            <p class="text-justify mt-5">
+              If you need so fast a toiltet click in the GO GO GO button and share you ubication. But, if you only want
+              to check our web application stay here and start with about Ublime.
+            </p>
           </div>
           <div class="col-md-6 col-lg 6 header-content-right">
           <img src="{% static 'img/header-right.jpg'%}" style="width: 100%;" alt="Candelaria">
@@ -20,7 +23,9 @@
     <!-- testimonial -->
     <section id="testimonial">
       <div class="container mt-5 mb-3">
-        <p class="h5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="h5">
+          aun no se si dejar esto
+        </p>
         <h4>- Yesid Gutierrez</h4>
       </div>
     </section>
@@ -34,7 +39,10 @@
           </div>
           <div class="col-md-6 col-lg-6 about-right my-auto">
             <h3 class="text-center mb-5 mt-5">About Ublime</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              Ublime is an democratic application web that help you to find a public toilet closer to yo, but,
+              if yo prefert a better toilet with a lot space, best toilet paper, and it doesn't smell like a toilet
+            </p>
             <a href="#" class="btn btn-outline-success btn-lg about-btn">Register</a>
           </div>
         </div>
@@ -64,7 +72,10 @@
             </form>
             <div class="col-md-5 text-center contact-right">
               <h2>Contact</h2>
-              <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="mt-5">
+                That's Ok, send to our team a email with your comments, don't worry you can write anything, but rememberg!
+                be polite and respectful.
+              </p>
             </div>
           </div>
         </div>
