--- a/app/templates/app/singup-provider.html
+++ b/app/templates/app/singup-provider.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <<div class="container">
@@ -10,7 +11,7 @@
   				<a href="" class="btn btn-block btn-primary">Sing Up with Google</a>
   				<a href="" class="btn btn-block btn-primary">Sing Up with Facebook</a>
   			</p>
-  			<p class="divider-text">
+  			<p class="divider-text text-center>
           		<span class="bg-light">OR</span>
      		 </p>
          <div class="container">
@@ -18,74 +19,21 @@
          </div>
   			<form method="POST" action="">
 				{% csrf_token %}
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-user"></i> </span>
-						</div>
-						<input placeholder="Username" {{form.username}}>
-
-					</div>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-user"></i> </span>
-						</div>
-						<input placeholder="First Name" {{form.first_name}}>
-
-					</div>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"> <i class="fa fa-user"></i> </span>
-						</div>
-						<input placeholder="Last Name" {{form.last_name}}>
-					 </div>
-					 <div class="form-group input-group">
-						<div class="input-group-prepend">
-						  <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
-						 </div>
-						  <input placeholder="Email" {{form.email}}>
-					 </div>
-					<div class="form-group input-group">
-						<div class="input-group-prepend">
-							 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-						</div>
-						<input placeholder="Password" {{form.password1}}>
-					 </div>
-				  	<div class="form-group input-group">
-						<div class="input-group-prepend">
-							 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-						</div>
-						 <input placeholder="Repeat Password" {{form.password2}}>
-				  	</div>
-				 <div class="form-group">
-					 <button type="submit" class="btn btn-warning btn-block"> Create Account  </button>
-				 </div>
-				  <p class="text-center">Have an account? <a href="{% url 'loginPage' %}"> Log In</a> </p>
- 		 	</form>
+                {{ form.username | as_crispy_field }}
+            <div class="row">
+                <div class="col-6">
+                    {{ form.first_name | as_crispy_field }}
+                </div>
+                <div class="col-6">
+                    {{ form.last_name | as_crispy_field }}
+                </div>
+            </div>
+                {{ form.email | as_crispy_field }}
+                {{ form.password1 | as_crispy_field }}
+                {{ form.password2 | as_crispy_field }}
+                <button type="submit" class="save btn btn-info">Send</button>
+		 	</form>
 		 </article>
 	 </div>
 </div>
-<!--<div class="mt-5 pt-5">
-	<form method="POST" action="">
-
-			{{form.username.label}}
-			{{form.username}}
-
-			{{form.first_name.label}}
-			{{form.first_name}}
-
-			{{form.last_name.label}}
-			{{form.last_name}}
-
-			{{form.email.label}}
-			{{form.email}}
-
-			{{form.password1.label}}
-			{{form.password1}}
-
-			{{form.password2.label}}
-			{{form.password2}}
-
-		<input type="submit" name="Create Provider">
-	</form>
-&lt;!&ndash;&ndash;&gt;	</div>-->
 {% endblock content %}
