[Fix]: adding final text in the home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,11 +7,12 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-med-6 col-lg-6 header-content-left">
-            <h2 class="display-4">I'm shitting!!!</h2>
+            <h2 class="display-4">release your ublime</h2>
             <p class="text-justify mt-5">
-              If you need so fast a toiltet click in the GO GO GO button and share you ubication. But, if you only want
+              If you need so fast a toiltet click in the SEARCH TOILET button and share you ubication. But, if you only want
               to check our web application stay here and start with about Ublime.
-            </
+            </p>
+            <div class="text-center"><a href="{% url 'userInterface' %}" class="btn btn-info text-center mv-3">SEARCH TOILET</a></div>
           </div>
           <div class="col-md-6 col-lg 6 header-content-right mt-3">
           <img src="{% static 'img/header-right.jpg'%}" style="width: 100%;" alt="Candelaria">
@@ -24,12 +25,14 @@
     <section id="testimonial">
       <div class="container mt-5 mb-3">
         <p class="h5">
-          aun no se si dejar esto
+          <b><i>"The World Health Organization will affect November 19 as World Toilet Day to raise awareness among the
+          population that the toilet is a staple object whose attention is cause of disease"
+          </i></b>
         </p>
-        <h4>- Yesid Gutierrez</h4>
+<!--        <h4>- Yesid Gutierrez</h4>-->
       </div>
       <div class="text-center">
-        <a href="#" class="btn btn-dark">Ublimemes...</a>
+        <a href="#" class="btn btn-dark">More Info</a>
       </div>
     </section>
     <!-- info -->
@@ -37,7 +40,7 @@
       <div class="container mt-5 my-5">
         <div class="row">
           <div class="col-md-6 cl-lg-6 about-left">
-            <img src="{% static 'img/bogota.jpg'%}" style="width: 100%;" alt="Bogota">
+            <img src="{% static 'img/cerdotoilet.jpg'%}" style="width: 100%;" alt="Bogota">
           </div>
           <div class="col-md-6 col-lg-6 about-right my-auto">
             <h3 class="text-center mb-5 mt-5">About Ublime</h3>
@@ -64,7 +67,7 @@
               <img src="{% static 'img/sebastian.jpg' %}" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Sebastian Montealegre.</h5>
-                <div class="card-text text-black-50">Software Engineer</div>
+                <div class="card-text text-black-50">El Brayan</div>
               </div>
             </div>
           </div>
@@ -74,7 +77,7 @@
               <img src="{% static 'img/yesid.jpg' %}" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Yesid Gutierrez</h5>
-                <div class="card-text text-black-50">Pisasuave</div>
+                <div class="card-text text-black-50">LaMeraMaquina</div>
               </div>
             </div>
           </div>
