[Fix]: adding logo MrUblime in navbar, changing images in home.html, adding carouserl in the home to show quotes

--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -3,9 +3,10 @@
      <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end fixed-top">
      <div class="container">
 
-       <a href="/" class="nabvar-brand">
-         <h5 class="text-info"><i class="fa fa-fire"></i>Ublime</h5>
-       </a>
+       <a  class="nabvar-brand" href="/">
+           <img id="brand-image" alt="Website Logo" src="static/img/MrUblime5.png" style="width: 12%; height: 12%">  Ublime
+               </a>
+
        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
          <span class="navbar-toggler-icon"></span>
        </button>
