[First]: Version stable

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,10 +4,10 @@
 {% block content %}
     <!-- header -->
     <header id="header">
-      <div class="container mt-5">
+      <div class="container mt-5 pt-5">
         <div class="row">
           <div class="col-med-6 col-lg-6 header-content-left">
-            <h2 class="display-4">release your ublime</h2>
+            <h2 class="display-4">Release your ublime</h2>
             <p class="text-justify mt-5">
               If you need so fast a toiltet click in the SEARCH TOILET button and share you ubication. But, if you only want
               to check our web application stay here and start with about Ublime.
