--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -56,7 +56,7 @@
           </div>
 
             <div class="text-center">
-              <a href="#" class="btn btn-dark">More Info</a>
+              <a href="{% url 'moreInfo' %}" class="btn btn-dark">More Info</a>
             </div>
         </div>
   </section>
@@ -68,11 +68,13 @@
           </div>
           <div class="col-md-6 col-lg-6 about-right my-auto">
             <h3 class="text-center mb-5 mt-5">About Ublime</h3>
-            <p>
-              Ublime is an democratic application web that help you to find a public toilet closer to yo, but,
-              if yo prefert a better toilet with a lot space, best toilet paper, and it doesn't smell like a toilet
+            <p class="text-justify">
+              Ublime is an democratic application web that help you to find a public toilet closer to yo, but, if you
+              prefer a better toilet with a lot space, best toilet paper, and it doesn't smell like a toilet; Ublime can
+              solve that for you. Do you have an space or a restroom / toilet that you think will be a best restroom / toilet
+              in your area please register this in the Register bottom
             </p>
-            <a href="#" class="btn btn-outline-success btn-lg about-btn">Register</a>
+            <div class="text-center"><a href="{% url 'toiletRequirements' %}" class="btn btn-outline-success btn-lg about-btn">How to do it?</a></div>
           </div>
         </div>
       </div>
@@ -91,7 +93,7 @@
               <img src="{% static 'img/sebastian.jpg' %}" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Sebastian Montealegre.</h5>
-                <div class="card-text text-black-50">El Brayan</div>
+                <div class="card-text text-black-50">Full stack software engineer</div>
               </div>
             </div>
           </div>
@@ -101,7 +103,7 @@
               <img src="{% static 'img/yesid.jpg' %}" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Yesid Gutierrez</h5>
-                <div class="card-text text-black-50">LaMeraMaquina</div>
+                <div class="card-text text-black-50">Full stack software engineer</div>
               </div>
             </div>
           </div>
