--- a/app/templates/app/more-info.html
+++ b/app/templates/app/more-info.html
@@ -2,6 +2,48 @@
 {% load static %}
 
 {% block content %}
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+     <div class="container px-5">
+              <img class="d-block w-100" src="static/img/NiceToilet.jpg" alt="First slide">
+             <p class="px-4">
+                 <b><i>"Why Ublime??
+                     Ublime seeks to help the population with access to clean baths, with inclusive services and
+                     adequate to the different generational and physical needs of today's citizens
 
-<h1>En construccion</h1>
+                 </i></b>
+             </p>
+         </div>
+    </div>
+    <div class="carousel-item">
+         <div class="container px-5">
+              <img class="d-block w-100" src="static/img/badtoilet.jpg" alt="Second slide">
+             <p class="px-4">
+                 <b><i>Water Aid estimates that nearly $ 260 billion is lost annually to preventable diseases caused by a
+                     lack of sanitary conditions. "If more was invested in sanitation, people and environments would be healthier,
+                     and the struggling economies could have a better workforce."
+                 </i></b>
+             </p>
+         </div>
+    </div>
+    <div class="carousel-item">
+       <div class="container px-5">
+              <img class="d-block w-100" src="static/img/badtoilet.jpg" alt="Third slide">
+             <p class="px-4">
+                 <b><i>
+                 </i></b>
+             </p>
+         </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 {% endblock %}
