--- a/app/templates/app/toilet-requirements.html
+++ b/app/templates/app/toilet-requirements.html
@@ -10,16 +10,24 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="..." alt="First slide">
+                      <img class="d-block w-100" src="static/img/IngPaper1.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Second slide">
+                      <img class="d-block w-100" src="static/img/IngToilet2.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Third slide">
+                      <img class="d-block w-100" src="static/img/IngToilet3.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="static/img/IngToilet4S.jpg" alt="Fourth slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="static/img/IngToilet5S.jpg" alt="Fifth slide">
                     </div>
                   </div>
                   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -30,6 +38,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
+                  <div class="text-center"><a href="{% url 'providerInterface' %}" class="btn btn-outline-success btn-lg about-btn">Toilet Register</a></div>
               </div
             </div>
       </section>
