[Fix]: addind dashboard.html file for CRUD and the 404.html

--- a/app/templates/app/provider-interface.html
+++ b/app/templates/app/provider-interface.html
@@ -51,7 +51,7 @@
             {{ form.longitude.as_hidden }}
           </div>
           <button type="submit" class="save btn btn-info">Save</button>
-          <a href={% url 'home' %} class="btn btn-outline-danger">Cancel</a>
+          <a href={% url 'dashboard' %} class="btn btn-outline-danger">Cancel</a>
         </form>
       </div>
     </div>
